# aerial_robotics

./: .gitignore  README.md
robowork_minihawk_control/: CMakeLists.txt  package.xml
robowork_minihawk_control/config/: minihawk_SIM_control.yaml  minihawk_control.yaml
robowork_minihawk_control/launch/: control.launch
robowork_minihawk_description/: CMakeLists.txt  package.xml
robowork_minihawk_description/meshes/collision/: airframe_1.STL  airframe_v2_1.STL  base_link.STL  elevon_left_2.STL  elevon_right.STL  elevon_right_1.STL  elevon_right_3.STL  motor_left_8.STL  motor_rear_1.STL  motor_rear_5.STL  motor_right.STL  motor_right_1.STL  motor_right_7.STL  motor_right_9.STL  tilt_base_left_6.STL  tilt_base_right_1.STL  tiltbase_right.STL
robowork_minihawk_description/meshes/visual/: airframe_v2b_1.STL  belly_100.STL  elevon_left.STL  elevon_left_1.STL  motor_left.STL  motor_left_1.STL  motor_left_6.STL  motor_rear.STL  tilt_base_left_1.STL  tilt_base_right_7.STL  tiltbase_left.STL
robowork_minihawk_description/urdf/: minihawk.xacro  minihawk_SIM_description.xacro  usb_camera_nocollisionvisual.urdf.xacro
robowork_minihawk_gazebo/: CMakeLists.txt  package.xml
robowork_minihawk_gazebo/launch/: empty_world.launch  minihawk_playpen.launch  spawn_minihawk_robot.launch
robowork_minihawk_gazebo/resources/: waypoints.txt
robowork_minihawk_gazebo/worlds/: minihawk_playpen.world
robowork_minihawk_launch/: CMakeLists.txt  package.xml
robowork_minihawk_launch/config/: apm_config_SIM.yaml  minihawk_SIM.rviz  minihawk_SIM_joint_controllers.yaml
robowork_minihawk_launch/launch/: vehicle1_apm_SIM.launch
robowork_minihawk_perception/: CMakeLists.txt  package.xml
robowork_minihawk_perception/config/: minihawk_SIM_MH_usb_camera_apriltag_tags.yaml
robowork_minihawk_perception/launch/: apriltag_detection.launch
