<?xml version="1.0"?>
<package format="2">
  <name>robowork_minihawk_launch</name>
  <version>0.0.0</version>
  <description>Package containing calibrations and launch files for MiniHawk.</description>

  <author email="papachric@gmail.com"> Christos Papachristos</author>
  <maintainer email="papachric@gmail.com">Christos Papachristos</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
</package>
